--- a/dev/scss/_header.scss
+++ b/dev/scss/_header.scss
@@ -1,5 +1,15 @@
-nav {
+header {
   background-color: white;
+  display: block;
+  min-height: 100%;
+  position: relative;
+  top: 0;
+  margin: 0 auto;
+}
+
+nav {
+  border-left: $border;
+  border-right: $border;
   width: 970px;
   margin-left: auto;
   margin-right: auto;
@@ -17,9 +27,15 @@ nav {
   text-align: center;
   margin: 0;
   float: left;
-  height: 50px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
+.less-height {
+  height: 34px;
+}
 
 .twelfth {
   width: 8.333%;
@@ -43,11 +59,13 @@ nav {
   border-radius: 12px;
   border: solid 1px $light-gray;
   padding: 5px;
+  height: 30px;
+  max-width: 135px;
 }
 
 .search .fa-search {
   position: absolute;
-  top: 6px;
+  top: 8px;
   right: 10px;
   font-size: 13px;
   color: $black;
@@ -64,6 +82,34 @@ nav {
   margin: 5px 10px;
 }
 
+.top-navigation li a {
+  color: $black;
+}
+
+
+.bottom-navigation {
+  padding-left: 0;
+  margin: 0;
+}
+
+.bottom-navigation li {
+  font-weight: lighter;
+  list-style: none;
+  display: inline-block;
+  margin: 0 15px;
+}
+
+.bottom-navigation li a {
+  color: $gray;
+}
+
+.bottom-navigation li a.active-tab {
+  border-bottom: solid 2px $primary;
+  color: $black;
+  padding: 8px;
+}
+
+
 
 .fa-comment {
   color: $green;
@@ -78,12 +124,10 @@ nav {
 }
 
 
-
-
 .fa-2x {
   font-size: 1.5em;
 }
 
 .fa-3x {
-  font-size: 2.335em;
+  font-size: 2.75em;
 }
