--- a/dev/scss/_variables.scss
+++ b/dev/scss/_variables.scss
@@ -13,7 +13,4 @@ $green: #62BC6F;
 $orange: #FBAB4A;
 $purple: #CD7FE2;
 
-$border-t: solid 1px $light-gray;
-$border-r: solid 1px $light-gray;
-$border-b: solid 1px $light-gray;
-$border-l: solid 1px $light-gray;
+$border: solid 1px $light-gray;
